[package]
name = "cpclient"
authors = ["i5hi"]
description = "Rust-C FFI exposing composite functionality to interface with cypherpost."
edition = "2018"
keywords = ["cypherpost-client", "rust-c-ffi"]
license = "MIT"
version = "0.1.0"


[lib]
crate-type = ["staticlib", "cdylib"]
name = "cpclient"

[release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

[build]
profiler = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.126"
serde_derive = "1.0.0"
serde_json = "1.0.64"
base64 = "0.13.0"
hex = "0.4.3"
sha2 = "0.10.5"
url = "2.2.2"
chacha20poly1305 = {version = "0.9.0", features = ["stream"]}
secp256k1 = {version = "0.22.0", features = ["rand", "bitcoin_hashes", "global-context", "rand-std"]}
bitcoin = {version = "0.28.1", features = ["rand", "base64","use-serde"]}
bip39 = "1.0.1"
bip85 = "0.1.1"
ureq = { version = "2.4.0", features = ["json", "charset", "socks-proxy"] }
